doc/guile-png.texi: Update

--- a/doc/guile-png.texi
+++ b/doc/guile-png.texi
@@ -651,6 +651,7 @@ or @code{average}.
 @end deffn
 
 @section PNG Chunks
+@cindex Chunk
 
 A PNG file consists of a PNG signature followed by a series of ``chunks''.
 @code{(png core chunk)} describes a generic PNG chunk.
