--- a/doc/guile-png.texi
+++ b/doc/guile-png.texi
@@ -86,6 +86,18 @@ that provides API for Portable Network Graphics
 
 This chapter describes the Guile-PNG API.
 
+@menu
+* PNG::                  High-level procedures to read and write images.
+* PNG Image::            PNG image type.
+* Graphics::             Graphic primitives and methods.
+* PNG Image Processing:: Image processing procedures.
+
+Internals:
+* PNG Chunks::           Internal representation of a PNG image.
+* Filter Algorithms::    Image filter algorithms.
+@end menu
+
+@node PNG
 @section PNG
 
 @code{(png)} module contains the basic PNG procedures to read/write PNG
@@ -111,6 +123,7 @@ Return value is undefined.
 
 @end deffn
 
+@node PNG Image
 @section PNG Image
 
 @subsection <png-compressed-image>
@@ -248,6 +261,7 @@ Convert an @var{image} to the PNG binary format, print the data to a
 Make an exact copy of an @var{image}, return the copy.
 @end deffn
 
+@node Graphics
 @section Graphics
 
 @code{(png graphcis ...)} contains classes that describing graphical objects
@@ -707,6 +721,7 @@ Crop a part of the base image using a @var{selection}.  Return a newly created
 
 @end deffn
 
+@node PNG Image Processing
 @section PNG Image Processing
 
 @code{(png image-processing)} provides high-level API for processing PNG
@@ -737,6 +752,7 @@ or @code{average}.
 
 @end deffn
 
+@node PNG Chunks
 @section PNG Chunks
 @cindex Chunk
 
@@ -1308,6 +1324,7 @@ Make a full clone of an ``zTXt'' @var{chunk} instance, return the copy of the
 chunk.
 @end deffn
 
+@node Filter Algorithms
 @section Filter Algorithms
 
 @code{(png core filter)} contains implementation of PNG filter algorithms as
