png/graphics/pixel: Improve API
* modules/png/graphics/pixel.scm (png-image-pixel-for-each):
  (png-image-pixel-map): Improve the API: use keywords for the
  callback procedure.
* modules/png/image-processing/invert-colors.scm
  (png-image-invert-colors): Update.
* doc/guile-png.texi: Update.

--- a/doc/guile-png.texi
+++ b/doc/guile-png.texi
@@ -519,7 +519,7 @@ undefined.
 
 The @var{proc} is called like follows:
 @example lisp
-(proc index pixel)
+(proc pixel #:index index #:x x #:y y)
 @end example
 
 @end deffn
@@ -532,7 +532,7 @@ image.
 
 The @var{proc} is called like follows:
 @example lisp
-(proc index pixel)
+(proc pixel #:index index #:x x #:y y)
 @end example
 
 The return value of the @var{proc} must be a new pixel.
